added products section

--- a/index.html
+++ b/index.html
@@ -119,8 +119,34 @@
     </header>
     <!-- END HEADER -->
 
+    <!-- MAIN -->
     <main>
-        
+        <section class="products">
+            <div class="container">
+                <div class="col-xs-12 col-md-12 col-lg-6">
+                    <div class="inner-col">
+                        <div class="content-col">
+                            <h2>HelbizGO</h2>
+                            <span>Next generation of electric city bikes.</span>
+                            <a href="#">Learn More ></a>
+                            <img src="img/HelbizGOxSegway.jpg" alt="scooter">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-md-12 col-lg-6">
+                    <div class="inner-col">
+                        <div class="content-col">
+                            <h2>HelbizBike</h2>
+                            <span>Seamless E-Scooter sharing globally.</span>
+                            <a href="#">Coming Soon</a>
+                            <img src="img/HelbizBike-2.jpg" alt="bike">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <!-- END MAIN -->
 </body>
 </html>
