--- a/index.html
+++ b/index.html
@@ -121,8 +121,11 @@
 
     <!-- MAIN -->
     <main>
+        <!-- Products -->
         <section class="products">
             <div class="container">
+
+                <!-- HelbizGo -->
                 <div class="col-xs-12 col-md-12 col-lg-6">
                     <div class="inner-col">
                         <div class="content-col">
@@ -134,6 +137,7 @@
                     </div>
                 </div>
 
+                <!-- HelbizBike -->
                 <div class="col-xs-12 col-md-12 col-lg-6">
                     <div class="inner-col">
                         <div class="content-col">
@@ -146,6 +150,42 @@
                 </div>
             </div>
         </section>
+        <!-- End products -->
+
+        <!-- Phone -->
+        <section class="phone">
+            <img src="img/iphone.png" alt="iphone">
+        </section>
+        <!-- End Phone -->
+
+        <!-- Info -->
+        <section class="info">
+            <div class="container">
+
+                <!-- How does it work -->
+                <div class="col-xs-12 col-md-12 col-lg-6">
+                    <div class="inner-col">
+                        <div class="content-col">
+                            <span>How does <br>
+                                  Helbiz work?
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Step 1 -->
+                <div class="col-xs-12 col-md-12 col-lg-6">
+                    <div class="inner-col">
+                        <div class="content-col step-1">
+                            <span>Step 1</span> <br>
+                            <span>Leave curbside when finished</span>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
+        <!-- End Info -->
     </main>
     <!-- END MAIN -->
 </body>
