--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
 
     <!-- FOOTER -->
     <footer>
+        <!-- Footer Menu -->
         <div class="container">
             <!-- White Logo -->
             <div class="col-xs-12 col-md-12 col-lg-3">
@@ -317,11 +318,12 @@
                 </ul>
             </div>
         </div>
+        <!-- Footer Menu -->
 
+        <!-- Legal Pages -->
         <div class="container legal-pages">
-
+            <!-- Social Icons -->
             <div class="col-xs-12 col-md-12 col-lg-3">
-                
                 <ul class="social-icons">
                     <li>
                         <a href="#"><i class="fab fa-facebook-square"></i></a>
@@ -339,23 +341,26 @@
                         <a href="#"><i class="fab fa-linkedin"></i></a>
                     </li>
                 </ul>
-
             </div>
 
+            <!-- Terms & Conditions -->
             <div class="col-xs-4 col-md-4 col-lg-3">
                 <a href="#"><span>Terms & Conditions</span></a>
             </div>
 
+            <!-- Press & News -->
             <div class="col-xs-4 col-md-4 col-lg-3">
                 <a href="#"><span>Press & News</span></a>
             </div>
 
+            <!-- Copyright -->
             <div class="col-xs-4 col-md-4 col-lg-3">
                 <a href="#"><span>&#169;2019Helbitz</span></a>
             </div>
-            
         </div>
+        <!-- End Legal Pages -->
 
+        <!-- App Stores -->
         <div class="container">
             <div class="app-stores">
                 <div class="col-lg-12">
@@ -364,6 +369,7 @@
                 </div>
             </div>
         </div>
+        <!-- End App Stores -->
     </footer>
     <!-- END FOOTER -->
 </body>
