Added cool hovers

--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                 <!-- App Store Buttons -->
                 <div>
                     <a href="#">
-                        <img src="img/header-app-store-badge.svg" alt="header-app-store-badge">
+                        <img src="img/header-app-store-badge.svg" alt="header-app-store-badge" class="apps-popping">
                     </a>
                     <a href="#">
-                        <img src="img/header-google-play-badge.svg" alt="header-google-play-badge">
+                        <img src="img/header-google-play-badge.svg" alt="header-google-play-badge" class="apps-popping">
                     </a>
                 </div>
 
@@ -125,7 +125,7 @@
                 <!-- HelbizGo -->
                 <div class="col-xs-12 col-md-12 col-lg-6">
                     <div class="inner-col">
-                        <div class="content-col">
+                        <div class="content-col window-popping">
                             <h2>HelbizGO</h2>
                             <span>Next generation of electric city bikes.</span>
                             <a href="#">Learn More ></a>
@@ -137,7 +137,7 @@
                 <!-- HelbizBike -->
                 <div class="col-xs-12 col-md-12 col-lg-6">
                     <div class="inner-col">
-                        <div class="content-col">
+                        <div class="content-col window-popping">
                             <h2>HelbizBike</h2>
                             <span>Seamless E-Scooter sharing globally.</span>
                             <a href="#">Coming Soon</a>
@@ -187,7 +187,7 @@
             <!-- Mobility, Get the App, Find Us -->
             <div class="medium-wrapper">
                 <!-- Mobility -->
-                <div class="mobility">
+                <div class="mobility window-popping">
                     <div class="centered">
                         <h2>Smart mobility on two wheels</h2>
                         <p>A cleaner and more convenient alternative to get around your city</p>
@@ -199,7 +199,7 @@
                 <div class="get-the-app">
                     <div class="col-xs-12 col-md-12 col-lg-6">
                         <div class="inner-col">
-                            <div class="content-col">
+                            <div class="content-col window-popping">
                                 <h2>Get the App</h2>
                                 <span>Download the app and start riding today</span> <br>
                                 <a href="#">IOS > </a>
@@ -215,7 +215,7 @@
                 <div class="find-us">
                     <div class="col-xs-12 col-md-12 col-lg-6">
                         <div class="inner-col">
-                            <div class="content-col">
+                            <div class="content-col window-popping">
                                 <h2>Find us around</h2>
                                 <span>Find us around the globe</span> <br>
                                 <a href="#">Our City > </a>
@@ -364,8 +364,8 @@
         <div class="container">
             <div class="app-stores">
                 <div class="col-lg-12">
-                    <img src="img/app-store-badge.svg" alt="store-badge">
-                    <img src="img/google-play-badge.svg" alt="google-play">
+                    <img src="img/app-store-badge.svg" alt="store-badge" class="apps-popping">
+                    <img src="img/google-play-badge.svg" alt="google-play" class="apps-popping">
                 </div>
             </div>
         </div>
